--- a/Contact.html
+++ b/Contact.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h4>Contact Information:</h4>
+    <h3>Contact Information:</h3>
     <p>Email: liuzhaoliang@hotmail.com</p>
     <p>Tel: 832-640-8098</p>
     <form class="" action="mailto:liuzhaoliang@hotmail.com" method="post" enctype="text/plain">
