--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <table cellspacing=30>
     <td><img src="index.png" alt=""></td>
     <td><h1>Leon Liu</h1>
-    <p><em><strong>Professor</strong> of Harbin Medical University</em></p>
-    <p>Cancer Biologist, Data Scientist.</p></td>
+    <p><em>Scientist of Harbin Medical University</em></p>
+    <p>Cancer Biologist, Data Analyst.</p></td>
   </table>
   <hr>
   <h3>Education</h3>
@@ -60,7 +60,7 @@
       <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>Bioinformatics</td>
+      <td>Shell Script</td>
       <td>⭐⭐⭐</td>
     </tr>
   </table>
