--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <li>An J, Luo Z, An W, Cao D, Ma J, Liu Z(*). Identification of spliceosome components pivotal to breast cancer survival. <a href="https://www.tandfonline.com/doi/full/10.1080/15476286.2020.1822636">RNA Biology 2020 18(6):833-842</a></li>
   </ol>
   <hr>
-  <h3>Contact Information</h3></a>
+  <h3>Contact Information</h3>
     <p>Email: liuzhaoliang@hotmail.com</p>
     <p>Tel: 832-640-8098</p>
 </body>
