--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
   </ol>
   <hr>
   <h3>Contact Information</h3>
-    <p>Email: liuzhaoliang@hotmail.com</p>
-    <p>Tel: 832-640-8098</p>
+  <ol>
+    <li>Email: liuzhaoliang@hotmail.com</li>
+    <li>Tel: 832-640-8098</li>
+  </ol>
 </body>
 
 </html>
