--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
   </ol>
   <hr>
   <h3>Contact Information</h3>
-  <ul>
-    <li>Email: liuzhaoliang@hotmail.com</li>
-    <li>Tel: 832-640-8098</li>
-  </ul>
+  <table>
+    <tr>Email: liuzhaoliang@hotmail.com</tr>
+    <tr>Tel: 832-640-8098</tr>
+  </table>
 </body>
 
 </html>
