--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
   <hr>
   <h3>Contact Information</h3>
   <table>
-    <tr>Email: liuzhaoliang@hotmail.com</tr>
-    <tr>Tel: 832-640-8098</tr>
+    <tbody>
+      <tr>Email: liuzhaoliang@hotmail.com</tr>
+      <tr>Tel: 832-640-8098</tr>
+    </tbody>
   </table>
 </body>
 
