--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Leon Liu's Personal website</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -49,18 +49,37 @@
     </tbody>
   </table>
   <hr>
-  <h3>Skills</h3>
+  <h3>Professional Experience</h3>
   <table cellspacing=10>
     <tr>
-      <td>Python</td>
-      <td>⭐⭐⭐</td>
+      <td>Scientist</td>
+      <td>12/2013 - </td>
+      <td>Cancer Research Institue, Harbin Medical University</td>
     </tr>
+    <tr>
+      <td>Postdoctoral fellow</td>
+      <td>10/2010 - 10/2013</td>
+      <td>University of Texas MD Anderson Cancer Center</td>
+    </tr>
+    <tr>
+      <td>Teaching assistant/Lecturer</td>
+      <td>07/2000 - 08/2004</td>
+      <td>State Laboratories for Agrobiotechnology, China Agricultural University</td>
+    </tr>
+  </table>
+  <hr>
+  <h3>Skills</h3>
+  <table cellspacing=10>
     <tr>
       <td>R </td>
       <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>Shell Script</td>
+      <td>Python </td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Shell script</td>
       <td>⭐⭐⭐</td>
     </tr>
   </table>
@@ -73,11 +92,13 @@
   </ol>
   <hr>
   <h3>Contact Information</h3>
-  <table>
-    <tbody>
-      <tr>Email: liuzhaoliang@hotmail.com</tr>
-      <tr>Tel: 832-640-8098</tr>
-    </tbody>
+  <table cellspacing=10>
+    <tr>
+      <td>Email: liuzhaoliang@gmail.com</td>
+    </tr>
+    <tr>
+      <td>Tel: 832-640-8098</td>
+    </tr>
   </table>
 </body>
 
